test/parser/positive/IntLiterals.java
public class IntLiterals {
  public IntLiterals() {}
  protected int x = 42;
}
