test/parser/negative/OctHexLiterals.java
public class OctHexLiterals {
  protected int x = 0xCAFE;
  protected int y = 0372;
}
